added twilio resume

--- a/src/resume_twilio.html
+++ b/src/resume_twilio.html
@@ -13,13 +13,14 @@
     <header>
         <h1 id="name" >Christopher Lee Messer</h1>
         <div id="textbox" class="textbox">
-            <p class="alignleft">Fort Worth, TX 76104</p>
+            <p class="alignleft">chrislmesser@gmail.com</p>
             <p class="aligncenter"></p>
-            <p class="alignright">chrislmesser@gmail.com</p>
+            <p class="alignright"></p>
 
         </div>
         <div style="clear: both;"></div>
-    <dt class="counter_st">
+
+    <dt class="counter_st_left">
     </dt>
 
 
@@ -31,7 +32,7 @@
             <h2 class="title">SKILLS</h2>
             <hr>
             <ul class="competencies_list">
-                <li><b>Programming Languages:</b> Python (Pandas, Scikit-learn, Numpy), SQL, R</li>
+                <li><b>Programming Languages:</b> Python (Pandas, Scikit-learn, Numpy), SQL, R, Java</li>
                 <li><b>Cloud Services:</b> AWS (Lambda, Route 53, API Gateway, S3, DynamoDB, Kinesis)</li>
                 <li><b>Data Visualization Software:</b> Tableau, Power BI</li>
                 <li><b>Professional Certifications:</b> Texas Certified Public Accountant (CPA)</li>
@@ -43,31 +44,45 @@
 
             <company class="company">
                 <h3 class="companyname">
-                    <b>Deloitte Consulting, Deloitte & Touche LLP</b>, Dallas, Texas
+                    <b>Deloitte Consulting, Deloitte & Touche LLP</b>
                     <span class="right"><i>September 2018 - Present</i></span>
                 </h3>
                 <role class="role">
                     <p>
-                        <span class="left"><i>AI & Data Engineering, Senior Data Science Consultant</i></span>
+                        <span class="left"><i>Senior Data Science Consultant, Deloitte Digital</i></span>
+                        <br>
+                    </p>
+                        <responsibilities class="responsibilities">
+                            <ul>
+
+                                <li>Performed recency, frequency, and customer lifetime value analyses to cluster customers into strategic marketing target groups. Measured campaign success using A/B testing, reporting a 6% month-over-month revenue increase</li>
+                                <li>Partnered with Engineering, Product, and Revenue Operations to identify customer groups most likely to raise incidents using a decision tree model, resulting in a billing system migration of 10K customers with 0 churn</li>
+                                <li>Developed and implemented a logistic regression model to analyze contributing factors to customer churn, resulting in the identification of a $43M revenue leak</li>
+                                <li>Led a team of 6 to identify Generative AI use cases across Telecommunication, Technology, and Media industries, resulting in $25M in sold engagement work</li>
+                                <li>Organized a panel event with 1k+ attendees on Generative AI and Natural Language Processing</li>
+
+                            </ul>
+
+                        </responsibilities>
+                    <p>
+                        <span class="left"><i>Senior Data Science Consultant, AI & Data Engineering</i></span>
                         <br>
                     </p>
 
 
-                        <responsibilities class="responsibilities">
-                            <ul>
-
-                                <li>Performed recency, frequency, and CLV analyses to cluster customers into strategic marketing target groups, and measure effectiveness using A/B testing. Campaign directly attributed to a 6% month-over-month revenue increase</li>
-                                <li>Developed and implemented a logistic regression model to analyze contributing factors to customer churn, resulting in the identification of a $43M revenue leak</li>
-                                <li>Designed and developed a PowerBI dashboard for a wine and spirits company to identify distributors on discount plans with negative contribution margin, eliminating $26M of annual losses</li>
-                                <li>Partnered with Engineering, Product, and Revenue Operations to identify customer groups most likely to raise incidents, resulting in a successful billing system migration of 10K customers with 0 churn over a three month period</li>
-                                <li>Developed a billing account data quality monitoring tool using Python, Pandas, DynamoDB and RDS databases, and Kinesis Firehose, reducing customer incident reports errors by 8% over a 3 month period</li>
-
-                            </ul>
+                    <responsibilities class="responsibilities">
+                        <ul>
+                            <li>Designed and developed a Tableau dashboard for a wine and spirits company to identify distributors on discount plans with negative contribution margin, eliminating $26M of annual losses</li>
+                            <li>Developed a billing account data quality monitoring tool using Python, Pandas, and AWS (DynamoDB, RDS, and Lambda), reducing customer incident reports errors by 8% over a 3 month period</li>
+                            <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M revenue leak at a large, online employment board tech company</li>
+                            <li>Designed and developed the relational database data model for product inventory, production forecasting, and financial data domains, enabling future state analytics reporting</li>
+                            <li>Led a team of 12 as a project manager in an Azure cloud migration for a large consumer products company</li>
+                        </ul>
 
 
-                        </responsibilities>
+                    </responsibilities>
 
-                    <role class="role">
+
                         <p>
                             <span class="left"><i>Senior Auditor - Analytics</i></span>
                             <br>
@@ -82,19 +97,9 @@
                                 <li>Created process flow diagrams and narratives to understand complex accounting processes and identify risks of material misstatement</li>
                                 <li>Expanded utilization of India based team, increasing offshore utilization by 18% and creating a 24-hour work cycle.</li>
                             </ul>
-                                <p class="capacity">
-                                    <i>Leadership Roles</i>
-                                </p>
-                                <ul>
-                                    <li>Led a cross-functional team of 5 engineers and data analysts to identify and resolve a $43M revenue leak at a large, online employment board tech company</li>
-                                    <li>Facilitated DEI recruiting campaigns, mentoring high school to college students in careers in consulting, resulting an 10 full-time offers extended</li>
-                                    <li>Led a team of 12 as a project manager in an AWS cloud migration for a large consumer products company</li>
-                                    <li>Organized a panel event with 1k+ attendees on Generative AI and Natural Language Processing</li>
-                                    <li>Led a team of 6 to identify Generative AI use cases across Telecommunication, Technology, and Media industries, resulting in $25M in sold engagement work</li>
-                                </ul>
 
                         </responsibilities>
-                    </role>
+
                 </role>
 
 
