added offline twilio resume

--- a/src/offline_copies/offline_copy.html
+++ b/src/offline_copies/offline_copy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<link rel="stylesheet" href="mystyle.css">
-<script src="visitor_count.js"></script>
+<link rel="stylesheet" href="../mystyle.css">
+<script src="../visitor_count.js"></script>
 <head>
     <meta charset="UTF-8">
     <title></title>
