added offline twilio resume2

--- a/src/offline_copies/offline_resume_twilio.html
+++ b/src/offline_copies/offline_resume_twilio.html
@@ -117,14 +117,12 @@
             <h2 class="title">PERSONAL PROJECTS</h2>
             <hr>
             <responsibilities class="responsibilities">
-            <ul>
-                <li>Completed the
-                    <a href="https://cloudresumechallenge.dev/docs/the-challenge/aws/">cloud resume challenge</a>
-                    using AWS services (Lambda, Route 53, API Gateway, S3, DynamoDB) and deployed using CloudFormation</li>
-                <li>Built a <a href="https://github.com/chris-messer/e-ink-budget-tracker">personal budget tracker</a> using a Raspberry Pi, Python, and Mint.com API</li>
-                <li><a href="https://github.com/chris-messer/bitcoin-sentiment-price-analysis">Completed an analysis</a> that measures the correlation between sentiment of Bitcoin Tweets and Reddit comments and the price of Bitcoin</li>
-                <li><a href="https://github.com/chris-messer/course-work">Created a portfolio</a> demonstrating functional and technical knowledge of linear and logistic regression models, support vector machines, simulation, optimization, change detection, time series forecasting, decision trees, and other analytical tools</li>
-            </ul>
+                <ul>
+                    <li>Completed the cloud resume challenge using AWS services (Lambda, Route 53, API Gateway, S3, DynamoDB) and deployed using CloudFormation to create an online digital resume at chrislmesser.com</li>
+                    <li>Built a personal budget tracker using a Raspberry Pi, Python, and Mint.com API</li>
+                    <li>Completed an analysis that measures the correlation between sentiment of Bitcoin Tweets and Reddit comments and the price of Bitcoin</li>
+                    <li>Created a portfolio demonstrating functional and technical knowledge of linear and logistic regression models, support vector machines, simulation, optimization, change detection, time series forecasting, decision trees, and other analytical tools at github.com/chris-messer/course-work</li>
+                </ul>
             </responsibilities>
         </section>
 
