--- a/src/resume_twilio.html
+++ b/src/resume_twilio.html
@@ -15,13 +15,13 @@
         <div id="textbox" class="textbox">
             <p class="alignleft">chrislmesser@gmail.com</p>
             <p class="aligncenter"></p>
-            <p class="alignright"></p>
+            <dt class="alignright"></dt>
 
         </div>
         <div style="clear: both;"></div>
 
-    <dt class="counter_st_left">
-    </dt>
+<!--    <dt class="counter_st_left">-->
+<!--    </dt>-->
 
 
     </header>
