--- a/src/resume.html
+++ b/src/resume.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="visitor_count.js"></script>
+
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -11,6 +13,9 @@
 <body>
 <div class="container">
     <header>
+        <a href="https://s3.amazonaws.com/chrislmesser.com/messer_chris_resume.pdf" download="messer_chris_resume.pdf">
+            <button class="btn" style="width:100%"><i class="fa fa-download"></i> Download</button>
+        </a>
         <h1 id="name" >Christopher Lee Messer</h1>
         <div id="textbox" class="textbox">
             <p class="alignleft">Fort Worth, TX 76104</p>
