--- a/src/resume.html
+++ b/src/resume.html
@@ -63,7 +63,7 @@
                             </li>
                             <li>Led the implementation of an open-source data governance platform to improve data
                                 documentation and quality, resulting in a 50% decrease in production bugs in the
-                                6 months of deployment
+                                first 6 months of deployment
                             </li>
                             <li>Implemented automated testing and CI/CD practices into the release cycle of a $5B
                                 consumer products company, reducing migration downtime from 24 hours to 6 hours
@@ -128,15 +128,15 @@
                             <li>Designed an outlier detection model to identify unusual transactions for audit
                                 selection, reducing audit hours by 3%
                             </li>
+                            <li>Expanded utilization of India based team, increasing offshore utilization by 18% and
+                                creating a 24-hour work cycle.
+                            </li>
                             <li>Gathered visualization requirements, retrieved transaction data, and designed and built
                                 Tableau visualizations to further audit risk assessment
                             </li>
                             <li>Retrieved and analyzed transaction data using Python and SQL</li>
                             <li>Managed a team of 7 direct report staff auditors in the completion of a 15,000 hour
                                 PCAOB audit of a F100 Company
-                            </li>
-                            <li>Expanded utilization of India based team, increasing offshore utilization by 18% and
-                                creating a 24-hour work cycle.
                             </li>
                         </ul>
 
@@ -184,7 +184,7 @@
                 <h3 class="schoolname">Georgia Institute of Technology</h3>
                 <degree_ class="degree">
                     <p>
-                        <span class="left">M.S., Computer Science (ML Specialization)</span><span
+                        <span class="left">Master of Science, Computer Science (ML Specialization)</span><span
                             class="right">In Progress</span>
                     <div style="clear: both;"></div>
                     <br>
